test/typechecker.d/invalid/ass0.souc.bad
n = 5

f(x: Integer): Integer = do
	i <- 5
	if i
		return x
	else
		return n
